# aistweet

./: README.md  aistweet.py  pyproject.toml  requirements.txt  setup.cfg  story.md
.github/: actions.yml
.github/workflows/: actions.yml
aistweet/: compress.py  geometry.py  ship_database.py  ship_tracker.py  tweeter.py  units.py
aistweet/data/: mid.csv  shiptype.csv  status.csv
tests/: test_geometry.py
