[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aistweet"
authors = [
    {name = "Aaron Mavrinac", email = "mavrinac@gmail.com"},
]
description = "Twitter photo bot for Raspberry Pi AIS tracking stations"
readme = "README.md"
dynamic = ["version"]
