[metadata]
name = aistweet
version = 0.1.0
author = Aaron Mavrinac
author_email = mavrinac@gmail.com
description = Twitter photo bot for a Raspberry Pi AIS tracking station
url = https://github.com/ezod/aistweet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.6
